cleaned some extra spaces and made code more readable

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.container {
+/*.container {
   display: flex;
   width: 75vw;
   justify-content: space-around;
@@ -16,3 +16,4 @@
   display: flex;
   justify-content: space-evenly;
 }
+*/
