--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,13 @@
-.container {
+/*.container {
   display: flex;
   width: 75vw;
   justify-content: space-around;
 }
 
 .card-container {
- align-items: center;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .card-controls {
@@ -16,3 +16,4 @@
   display: flex;
   justify-content: space-evenly;
 }
+*/
